# x11vnc-auto

./: .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  README  acinclude.m4  build_debs.sh.in  configure.ac  x11vnc-auto.socket  x11vnc-auto.spec  x11vnc-auto.spec.in  x11vnc-auto@.service  x11vnc.socket  x11vnc@.service
conf/: Makefile.am  vncmon-sample.conf  xfce4-genmon.sh.in
debian/: Makefile.am  changelog  changelog.src  control  control.src  copyright  postinst  postrm  prerm  rules
helpers/: Makefile.am  ini_file_warning
icons/: Makefile.am  vncmon-1.xcf  vncmon-16x16.xpm  vncmon-2.xcf  vncmon-3.xcf  vncmon-4.xcf  vncmon-5.xcf  vncmon-6.xcf  vncmon-many.xcf  vncmon.xcf
src/: Makefile.am
src/vncmon/: Makefile.am  config.cpp  config.h  connectionlistmodel.cpp  connectionlistmodel.h  connectionlistview.cpp  connectionlistview.h  paths.h.in  profile.cpp  profile.h  vncmon.cpp  vncmon.h
systemd/: Makefile.am  daemon-reload.sh  x11vnc-auto@.service.in
x11vnc/: Makefile.am  build_x11vnc.sh  build_x11vnc.sh.in
